<!--
  Copyright (c) 2019 Bevilacqua Joey

  Licensed under the GNU GPLv3 license

  The text of the license can be found in the LICENSE file
  or at https://www.gnu.org/licenses/gpl.txt
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/glucose_editor_insulin_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/glucose_editor_insulin_editor"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_insulin_settings"
        android:contentDescription="@string/glucose_editor_insulin_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/glucose_editor_insulin_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/glucose_editor_insulin_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/glucose_editor_insulin_spinner"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glucose_editor_insulin_title"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/glucose_editor_insulin_value"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/glucose_editor_insulin_value"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glucose_editor_insulin_title"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3"
        tools:targetApi="O" />

    <TextView
        android:id="@+id/glucose_editor_insulin_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/glucose_editor_insulin_none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glucose_editor_insulin_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/glucose_editor_insulin_positive"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glucose_editor_insulin_spinner"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3"
        tools:text="@string/glucose_editor_insulin_apply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/glucose_editor_insulin_negative"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:textColor="?colorAccent"
        app:layout_constraintEnd_toStartOf="@id/glucose_editor_insulin_positive"
        app:layout_constraintTop_toTopOf="@id/glucose_editor_insulin_positive"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
